-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
3
-
9223372036854775807
Configuring IPv6 NID on an IB interface using o2ib net fails with an error if "lnetctl net add --nid" is used
# lnetctl net add --nid 2001::211:2233:4455:201@o2ib
---
add:
- net:
errno: -22
descr: ! "unsupported NID"
Configuring IPv6 NID on an IB interface using o2ib net results in a corrupt IPv4-style NID if "lnetctl net add --net o2ib --if ib0" is used and first address listed for the interface is IPv6 global
# ip a ... 4: ib0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 2044 qdisc mq state DOWN group default qlen 256 link/infiniband 00:00:05:26:fe:80:00:00:00:00:00:00:00:11:22:33:44:55:02:00 brd 00:ff:ff:ff:ff:12:40:1b:ff:ff:00:00:00:00:00:00:ff:ff:ff:ff inet6 2001::211:2233:4455:201/64 scope global valid_lft forever preferred_lft forever inet6 fe80::211:2233:4455:200/64 scope link valid_lft forever preferred_lft forever ... # modprobe lnet # lnetctl lnet configure # lnetctl net add --net o2ib --if ib0 # lnetctl net show net: - net type: lo local NI(s): - nid: 0@lo status: up - net type: o2ib local NI(s): - nid: 32.1.0.0@o2ib status: down interfaces: 0: ib0