LU-18317 lnet: fix configure o2ib NID with IPv6 address

Add support for IPv6@o2ib NID parsing.
Fix two bugs in kiblnd_startup():
1. strscpy(ifname, ..., sizeof(ifname)) used sizeof(char *) instead
   of the actual destination buffer size, truncating long interface
   names to 8 bytes.
   The strscpy() destination ifname was a pointer that could point
   to either ni->ni_interface (user-supplied) or kib_default_ipif
   (static read-only string "ib0"), risking writes to read-only
   memory or wrong buffer.
2. Remove incorrect libcfs_strnid() call that tried to parse the
   interface name (e.g. "ib0") as a NID, which always failed and
   reset ni->ni_nid to zero.

Signed-off-by: Xinxia Qu <xqu@ddn.com>
Change-Id: Id068ea9b971715f16a4482b7d69ff41ac0850c75
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/63156
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Chris Horn <chorn@ddn.com>
Reviewed-by: Cyril Bordage <cbordage@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>